# vban

./: CMakeLists.txt  README.md  configure.ac
src/: CMakeLists.txt  Makefile.am
src/common/: audio.c  audio.h  logger.c  packet.c  packet.h  socket.c  version.h
src/common/backend/: alsa_backend.c  alsa_backend.h  audio_backend.c  audio_backend.h  file_backend.c  file_backend.h  pipe_backend.c  pipe_backend.h  pulseaudio_backend.c  pulseaudio_backend.h
src/emitter/: main.c
src/ping/: main.c
src/receptor/: main.c
src/vban/: vban.h
